--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.XfermodeTestActivity" />
+        <activity android:name=".ui.AlignTextViewActivity" />
+        <activity android:name=".ui.CoordinatorTestActivity" />
     </application>
 
 </manifest>
