--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".ui.XfermodeTestActivity" />
         <activity android:name=".ui.AlignTextViewActivity" />
         <activity android:name=".ui.CoordinatorTestActivity" />
+        <activity android:name=".ui.FadeInTextViewActivity" />
     </application>
 
 </manifest>
